--- a/index.html
+++ b/index.html
@@ -148,70 +148,26 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 		<div class="container">
 			<div class="row">
 				<div class="col-lg-12 text-center">
-					<h2>Leitura</h2>
 					<p class="large text-muted">&nbsp;</p>
-					<h3>Sol das Almas</h3>
-						<p class="large text-muted">É pelo amor, sol das almas, que Deus mais eficazmente atua no mundo.</p>
-						<p class="large text-muted">Já notamos como um belo dia de sol consegue nos fazer bem? A temperatura pode estar baixa, mostrando os prenúncios do inverno, mas mesmo assim, o brilho intenso da estrela solar consegue nos trazer ânimo e esperança.</p>
-						<div id="divleitura1" class="collapse">
-							<p class="large text-muted">Algum poeta apaixonado poderia dizer que os raios solares são como um abraço do Criador, fazendo-nos acreditar que estamos seguros, que estamos protegidos.</p>
-							<p class="large text-muted">Mas é através de um outro sol, um sol interior, que o Pai se mostra mais presente em nossas vidas: o amor.</p>
-							<p class="large text-muted">O amor encontrado no coração do homem, manifestado em seus pensamentos e ações; o amor,condição indispensável, para que tudo na vida faça sentido e tenha valor.</p>
-							<p class="large text-muted">Paulo de Tarso, em sua carta ao povo da cidade de Corinto, afirmava que se não houvesse amor em suas ações, elas não teriam validade, e que se não existisse amor em sua alma, ele nada seria.</p>
-							<p class="large text-muted">O Apóstolo ainda trazia a aplicação prática desse ensino, dizendo que o amor é paciente, mostrando-nos a virtude da paciência, essa disposição íntima que nos faz esperar com calma, que nos auxilia a evitar a precipitação, que não é passiva, mas é atuante e dinâmica.</p>
-							<p class="large text-muted">O amor é benigno, isto é, ele deve irradiar de nossa casa interior, para iluminar outros lares através da caridade, da intenção de fazer felizes aqueles que estão ao nosso redor.</p>
-							<p class="large text-muted">O amor não arde em ciúmes, não guarda o sentimento de posse sobre ninguém, pois sabe que não possuímos as pessoas, e que se as amamos, devemos libertá-las.</p>
-							<p class="large text-muted">O amor não se orgulha, nem se ensoberbece, é humilde, e faz com que saibamos o nosso devido lugar, conhecendo nossas imperfeições e reconhecendo as dificuldades do próximo, jamais nos proclamando melhores que alguém.</p>
-							<p class="large text-muted">O amor não se conduz inconvenientemente, é delicado, sensível, e se expressa nas pequenas coisas, nas pequenas ações, que são invisíveis aos olhos do mundo, mas que para Deus demonstram nosso interesse e preocupação com as outras pessoas.</p>
-							<p class="large text-muted">O amor não procura seus interesses, é espontâneo, não age visando a vantagem, a recompensa. Ele simplesmente ama, se doa, sem exigir retorno.</p>
-							<p class="large text-muted">O amor não se exaspera, é tolerante, compreensivo, e sabe que necessitamos compreender as dificuldades alheias, pois todos, sem exceção, ainda as temos.</p>
-							<p class="large text-muted">O amor não se ressente do mal, perdoa. Não permite que o veneno do ressentimento prejudique nossa saúde física e espiritual.</p>
-							<p class="large text-muted">E, finalmente, Paulo de Tarso nos ensina que o amor não se alegra com a injustiça, mas regozija-se com a verdade, mostrando-nos que devemos ser defensores da verdade, da sinceridade, mas não dessa sinceridade dura que atira as verdades no rosto dos outros - deixando assim de ser virtude.</p>
-							<p class="large text-muted">A verdade deve ser revelada com psicologia, com cautela, visando construir, e não destruir o semelhante. </p>
-							<p class="large text-muted">*  *  *</p>
-							<p class="large text-muted">O amor decompõe-se em muitas cores, em muitas virtudes.</p>
-							<p class="large text-muted">É este sol das almas que buscamos, cada um de uma forma, cada um a seu tempo. Sempre amparados pelo astro de primeira grandeza que é Jesus, que veio à Terra e permaneceu nestes ares para nos guiar aos caminhos que nos conduzirão ao Criador.</p>
-						</div>
-					<button type="button" id="lermaisSoldasAlmas" class="btn btn-info" data-toggle="collapse" data-target="#divleitura1">Ler Mais</button>
-				</div>
-			</div>
-		</div>
-		<div class="container">
-			<div class="row">
-				<div class="col-lg-12 text-center">
-					<p class="large text-muted">&nbsp;</p>
-					<h3>Quando começa o amor?</h3>
-						<p class="large text-muted">Olhando esses amores que andam pelo mundo, dando demonstrações tão extraordinárias da excelência do sentimento, nos perguntamos: Quando começamos a amar?</p>
-						<p class="large text-muted">Nascemos no seio de uma família e amamos nossos pais. Convivemos com irmãos, familiares próximos e vamos dilatando essa nossa capacidade de amar.</p>
-						<p class="large text-muted">Comovente é registrar o amor de irmãos que se alonga no tempo. Irmãos que se dedicam a outros irmãos.</p>
-					<div id="divleitura2" class="collapse">
-						<p class="large text-muted">Crianças que, mal começam a falar e dar conta de si próprias, expressam extremos cuidados pelo irmão com necessidades especiais.</p>
-						<p class="large text-muted">Algumas chegam a dizer, com todas as palavras: Sempre vou cuidar de você!</p>
-						<p class="large text-muted">E se o dizem, o fazem. Os fatos, todos os dias, nos trazem notícias de irmãos dedicados. Irmãos que chegam a renunciar a suas próprias vidas para atender aquele que necessita de atenção maior.</p>
-						<p class="large text-muted">Mas, quando tudo isso começa? Qual o mistério desses laços tão fortes?</p>
-						<p class="large text-muted">Aprendemos, na Doutrina Espírita, que viajamos através do tempo e das tantas vidas, reencarnando vezes muitas nos mesmos círculos familiares.</p>
-						<p class="large text-muted">Nem sempre com o mesmo parentesco, mas, próximos, de forma a irmos exercitando o amor de pais, de irmãos, de primos, tios.</p>
-						<p class="large text-muted">Repetimos experiências junto a amigos que se nos tornam verdadeiros irmãos. Amigos com os quais convivemos na infância, atravessamos a adolescência e prosseguimos na madureza dos anos.</p>
-						<p class="large text-muted">Uma foto recentemente publicada na Internet nos demonstra essa realidade do amor que antecede a vida física.</p>
-						<p class="large text-muted">O casal americano Ian e Brittani Mcintire soube que seriam pais de dois herdeiros, um menino e uma menina.</p>
-						<p class="large text-muted">Mason, o menino, apresenta uma deficiência cardíaca e uma deformação no cérebro.</p>
-						<p class="large text-muted">Ele pesa somente duzentos e cinquenta e cinco gramas, enquanto a irmã pesa um quilo.</p>
-						<p class="large text-muted">Segundo as indicações médicas, a chance de sobrevivência de Mason seria uma cirurgia cardíaca, inviável pelos problemas do cérebro.</p>
-						<p class="large text-muted">A apreensiva situação ganhou uma tonalidade mais alegre, quando o ultrasom mostrou o bebê segurando a mão de sua irmã, no útero materno.</p>
-						<p class="large text-muted">A mãe emocionada, declarou: Eu o carrego mas a única que pode estar ali, com ele, é ela. E o está segurando.</p>
-						<p class="large text-muted">É reconfortante saber que, haja o que houver, ele não estará sozinho.</p>
-						<p class="large text-muted">Vendo a imagem, que se tornou viral na Internet, cogitamos do seu significado profundo.</p>
-						<p class="large text-muted">A irmãzinha, que o segura pela mão, estará dizendo: Fique, lute, não tema?</p>
-						<p class="large text-muted">Estará passando energias revitalizadoras ao irmãozinho? Desejará que ele nasça, e que possa estar ao seu lado?</p>
-						<p class="large text-muted">De onde vêm essas almas, nos indagamos. Quantas vidas terão realizado juntas?</p>
-						<p class="large text-muted">Se decidiram serem gestadas juntas, bons motivos existem, com certeza. Motivos que se perdem na curva do tempo e falam de uma afeição profunda.</p>
-						<p class="large text-muted">Se Mason conseguirá vir à luz e sobreviver, somente Deus o sabe.</p>
-						<p class="large text-muted">O que é certo é que o amor o sustenta, e lhe insufla ânimo.</p>
-						<p class="large text-muted">O amor o fortifica e aguarda que a vida se concretize, no plano físico, para prosseguirem juntos.</p>
-						<p class="large text-muted">Doces mistérios do amor que se perpetua no tempo...</p>
-						<p class="large text-muted">Excelente Semana !!</p>
+					<h3>Que tal transformar o Amor em sucesso?</h3>
+						<p class="large text-muted">“Cada dia me convenço mais que o desperdício da vida está no amor que não damos, nas forças que não usamos, na prudência egoísta que nada arrisca, e que, esquivando‐se do sofrimento, perdemos também a felicidade. A dor é inevitável. O sofrimento é opcional”.</p>
+						<p class="large text-muted">Carlos Drummond de Andrade</p>
+						<p class="large text-muted">O amor é um bálsamo e uma força que nos impulsiona. Além de ser uma luz que transforma qualquer caminho em um trajeto possível. Muitas vezes, nos desmotivamos em meio ao nevoeiro das situações pesadas, não é mesmo?</p>
+					<div id="divleitura1" class="collapse">
+						<p class="large text-muted"> Afinal, não há como fugir da estrada à nossa frente. Ela esconde bifurcações e trilhas, por vezes, assustadoras. Sem forças, sucumbimos devido às provações que nos são impostas. Desistimos de dar o melhor e escolhemos parar em alguma esquina para recuperar as forças perdidas. Esta parada é fundamental para recompor o frescor da esperança. Mas atenção, nem todas as pessoas, após uma parada estratégica, voltarão a caminhar com foco e fé. Aqueles que estão soterrados em sentimentos pesados e mergulhados na escuridão da revolta, mágoa, ódio, inconformismo, raiva, falta de amor por si mesmo e pela estrada que lhe foi gentilmente cedida pela força divina, dificilmente seguem trajetos sadios. Elas não entendem que a doação da estrada é uma dádiva; nela há espaço, tempo e oportunidade para lavar a alma, substituir velhas roupagens por novas e investir em uma visão de vida mais evoluída e espiritualizada. Aquele que inicia a jornada, movido pela chama do amor, certamente terá êxito no caminho, uma vez que a energia do amor revela soluções e entendimentos mais amplos sobre tudo. A dor é inevitável para todos, mas o sofrimento sempre será amenizado pela sabedoria do amor. Somos fãs de tantas celebridades, não é? Que tal: </p>
+						<p class="large text-muted">• Sermos fãs da energia do amor? </p>
+						<p class="large text-muted">• Investirmos na cura de tudo que nos afasta do amor?</p>
+						<p class="large text-muted">• Transmutarmos o peso de correntes pesadas por asas de borboleta?</p>
+						<p class="large text-muted">• Matricular-nos na escola da vida e aprender sobre o poder do amor?</p>
+						<p class="large text-muted"> Que tal transformar o Amor em sucesso?</p>
+						<p class="large text-muted">• Treinarmos com as plantas, pássaros, estrelas, lua, vento, flores até chegar ao nosso coração?</p>
+						<p class="large text-muted">• Amar-se e amar o caminho que nos foi presenteado?</p>
+						<p class="large text-muted">• Recomendar o amor nos negócios?</p>
+						<p class="large text-muted">• Introduzir o amor na prosperidade? </p>
+						<p class="large text-muted">• Que tal transformar o amor no maior sucesso do planeta?  Que tal </p>
+						<p class="large text-muted">Sejamos vendedores e compradores de amor, assim seremos multiplicadores do desejo dos anjos.</p>
 					</div>
-					<button type="button" id="lermaisQuandoComecaoAmor" class="btn btn-info" data-toggle="collapse" data-target="#divleitura2">Ler Mais</button>
+					<button type="button" id="lermaisQuetaltransformaroAmoremsucesso" class="btn btn-info" data-toggle="collapse" data-target="#divleitura1">Ler Mais</button>
 				</div>
 			</div>
 		</div>
