novo texto como sentir o amor

--- a/index.html
+++ b/index.html
@@ -149,24 +149,28 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 			<div class="row">
 				<div class="col-lg-12 text-center">
 					<p class="large text-muted">&nbsp;</p>
-					<h3>Que tal transformar o Amor em sucesso?</h3>
-						<p class="large text-muted">“Cada dia me convenço mais que o desperdício da vida está no amor que não damos, nas forças que não usamos, na prudência egoísta que nada arrisca, e que, esquivando‐se do sofrimento, perdemos também a felicidade. A dor é inevitável. O sofrimento é opcional”.</p>
-						<p class="large text-muted">Carlos Drummond de Andrade</p>
-						<p class="large text-muted">O amor é um bálsamo e uma força que nos impulsiona. Além de ser uma luz que transforma qualquer caminho em um trajeto possível. Muitas vezes, nos desmotivamos em meio ao nevoeiro das situações pesadas, não é mesmo?</p>
-					<div id="divleitura1" class="collapse">
-						<p class="large text-muted"> Afinal, não há como fugir da estrada à nossa frente. Ela esconde bifurcações e trilhas, por vezes, assustadoras. Sem forças, sucumbimos devido às provações que nos são impostas. Desistimos de dar o melhor e escolhemos parar em alguma esquina para recuperar as forças perdidas. Esta parada é fundamental para recompor o frescor da esperança. Mas atenção, nem todas as pessoas, após uma parada estratégica, voltarão a caminhar com foco e fé. Aqueles que estão soterrados em sentimentos pesados e mergulhados na escuridão da revolta, mágoa, ódio, inconformismo, raiva, falta de amor por si mesmo e pela estrada que lhe foi gentilmente cedida pela força divina, dificilmente seguem trajetos sadios. Elas não entendem que a doação da estrada é uma dádiva; nela há espaço, tempo e oportunidade para lavar a alma, substituir velhas roupagens por novas e investir em uma visão de vida mais evoluída e espiritualizada. Aquele que inicia a jornada, movido pela chama do amor, certamente terá êxito no caminho, uma vez que a energia do amor revela soluções e entendimentos mais amplos sobre tudo. A dor é inevitável para todos, mas o sofrimento sempre será amenizado pela sabedoria do amor. Somos fãs de tantas celebridades, não é? Que tal: </p>
-						<p class="large text-muted">• Sermos fãs da energia do amor? </p>
-						<p class="large text-muted">• Investirmos na cura de tudo que nos afasta do amor?</p>
-						<p class="large text-muted">• Transmutarmos o peso de correntes pesadas por asas de borboleta?</p>
-						<p class="large text-muted">• Matricular-nos na escola da vida e aprender sobre o poder do amor?</p>
-						<p class="large text-muted"> Que tal transformar o Amor em sucesso?</p>
-						<p class="large text-muted">• Treinarmos com as plantas, pássaros, estrelas, lua, vento, flores até chegar ao nosso coração?</p>
-						<p class="large text-muted">• Amar-se e amar o caminho que nos foi presenteado?</p>
-						<p class="large text-muted">• Recomendar o amor nos negócios?</p>
-						<p class="large text-muted">• Introduzir o amor na prosperidade? </p>
-						<p class="large text-muted">• Que tal transformar o amor no maior sucesso do planeta?  Que tal </p>
-						<p class="large text-muted">Sejamos vendedores e compradores de amor, assim seremos multiplicadores do desejo dos anjos.</p>
-					</div>
+					<h3>Como sentir o amor em todas as suas formas?</h3>
+						<p class="large text-muted">Nas alturas dos Andes, a água se transforma em neve. Muda de forma, mas continua sendo água.</p>
+						<p class="large text-muted">Aí muda novamente e torna-se uma geleira. Então, o lago e o sol seduzem a geleira e quando ela derrete, vai para o rio. </p>
+						<div id="divleitura1" class="collapse"></div>
+							<p class="large text-muted">Isso é incrivelmente bonito, o azul mais azul que você já viu. E é água. A água muda de forma milhões de vezes.</p>
+							<p class="large text-muted">Em cada uma das suas formas é esplêndida, e nunca para de ser água. As ondas são refrescantes, reconfortantes, porém, o tsunami é devorador e destrutivo.</p>
+							<p class="large text-muted">Às vezes, cai como chuva, dando vida nova à terra. Beber água fresca da nascente é curativo e nutritivo. Mas ela pode também afogar você, roubando seu último suspiro.</p>
+							<p class="large text-muted">À medida que sua consciência se expande, você percebe que o amor é tudo o que existe, tudo no universo é uma manifestação desse amor.</p>
+							<p class="large text-muted">Uma vez que você reconhece isso, consegue ver a magia e a maravilha de tudo. Você vê o amor na fúria das pessoas, o amor no ciúme, o amor mesmo dentro do ódio.</p>
+							<p class="large text-muted">Não importa quais emoções você expressa, você reconhece que tudo isso é apenas amor tentando penetrar.</p>
+							<p class="large text-muted">Quando nos ancoramos no amor-consciência, tudo o que vemos é amor em todas as suas formas. É perfeito.</p>
+							<p class="large text-muted">O sofrimento não depende do que nos rodeia. Depende da nossa percepção. É uma escolha que fazemos a cada momento.</p>
+							<p class="large text-muted">Se você está desesperado por conseguir amor do mundo exterior, dê ele a si mesmo.</p>
+							<p class="large text-muted">Se você sente ansiedade ou necessidade em alguns dos seus relacionamentos pessoais, ou se você quer que alguém mude para você ser feliz, então precisa entrar e amar a si mesmo.</p>
+							<p class="large text-muted">Enquanto não assumirmos a responsabilidade pela nossa própria felicidade, até não percebermos que nós e somente nós somos responsáveis pela nossa satisfação, continuaremos insatisfeitos.</p>
+							<p class="large text-muted">Você pode se reinventar, toda hora. Você pode escolher o que deseja. Essa é a coisa incrível sobre ser humanos: nós escolhemos, e então podemos mudar.</p>
+							<p class="large text-muted">Mudar para sermos mais amor, mais liberdade, deixar nossas limitações, começar a viver no momento, adquirir novos hábitos que não nos causam sofrimento.</p>
+							<p class="large text-muted">A verdadeira consciência tom  aresponsabilidade; não percebe o mundo como uma coisa separada de si.</p>
+							<p class="large text-muted">É consciente de fazer parte do resto do mundo. Se eu sempre me criticar, se eu estiver me comparando e reclamando, se eu não for apenas o brilho de quem eu realmente sou, quem é responsável por isso? Eu. Cada um de nós é único, perfeito e brilhante, mas precisamos encontrar esse brilho polindo as facetas. A escolha é sua, de mais ninguém. Eu escolho a grandeza de quem eu sou. Não posso ser mais ninguém. E essa escolha é uma coisa incrível, pois assim que você achar isso, não há mais comparações, nem ciúmes, nem inseguranças: só existe amor.</p>
+							<p class="large text-muted">Aí você abraçará seu mundo com felicidade. Você encontrará alegria por que não estará se comparando; apenas curtindo a variedade de sua bela criação.</p>
+							<p class="large text-muted">Por Isha Judd</p>
+						</div>
 					<button type="button" id="lermaisQuetaltransformaroAmoremsucesso" class="btn btn-info" data-toggle="collapse" data-target="#divleitura1">Ler Mais</button>
 				</div>
 			</div>
