--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 					<h3>Como sentir o amor em todas as suas formas?</h3>
 						<p class="large text-muted">Nas alturas dos Andes, a água se transforma em neve. Muda de forma, mas continua sendo água.</p>
 						<p class="large text-muted">Aí muda novamente e torna-se uma geleira. Então, o lago e o sol seduzem a geleira e quando ela derrete, vai para o rio. </p>
-						<div id="divleitura1" class="collapse"></div>
+						<div id="divleitura1" class="collapse">
 							<p class="large text-muted">Isso é incrivelmente bonito, o azul mais azul que você já viu. E é água. A água muda de forma milhões de vezes.</p>
 							<p class="large text-muted">Em cada uma das suas formas é esplêndida, e nunca para de ser água. As ondas são refrescantes, reconfortantes, porém, o tsunami é devorador e destrutivo.</p>
 							<p class="large text-muted">Às vezes, cai como chuva, dando vida nova à terra. Beber água fresca da nascente é curativo e nutritivo. Mas ela pode também afogar você, roubando seu último suspiro.</p>
