--- a/index.html
+++ b/index.html
@@ -139,6 +139,9 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 					</div>
 					<p>&nbsp;</p>
 				</div>
+				<div class="col-lg-12 text-center">
+					<a href="#map">Veja aqui mais detalhes de como chegar</a>
+				</div>
 			</div>
 		</div>
 	</section>
@@ -650,7 +653,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 					</div>
 					<br /> <br />
 					<div>
-						<a href="img/mapa_montado.png"><img src="img/mapa_montado_cell_sm.png" alt="Mapa" title="Mapa" width="100%"/></a>
+						<a href="img/mapa_montado.png"><img src="img/mapa_montado_cell_sm.png" alt="Mapa" title="Mapa" width="100%" style="max-width:600px"/></a>
 					</div>
 				</div>
 			</div>
