add id nos botoes para monitorar eventos

--- a/index.html
+++ b/index.html
@@ -73,14 +73,14 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 			<div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
 				<ul class="nav navbar-nav navbar-right">
 					<li class="hidden"><a href="#page-top"></a></li>
-					<li><a class="page-scroll" href="#proximos_eventos">Próximos Eventos</a></li>
-					<li><a class="page-scroll" href="#leitura">Leitura</a></li>
-					<li><a class="page-scroll" href="#rituais">Rituais</a></li>
-					<li><a class="page-scroll" href="#instituto">Instituto</a></li>
-					<li><a class="page-scroll" href="#ayahuasca">Ayahuasca</a></li>
-					<li><a class="page-scroll" href="#normas">Normas</a></li>
+					<li><a id="menu-proximos-eventos" class="page-scroll" href="#proximos_eventos">Próximos Eventos</a></li>
+					<li><a id="menu-leitura" class="page-scroll" href="#leitura">Leitura</a></li>
+					<li><a id="menu-rituais" class="page-scroll" href="#rituais">Rituais</a></li>
+					<li><a id="menu-instituto" class="page-scroll" href="#instituto">Instituto</a></li>
+					<li><a id="menu-ayahuasca" class="page-scroll" href="#ayahuasca">Ayahuasca</a></li>
+					<li><a id="menu-normas" class="page-scroll" href="#normas">Normas</a></li>
 					<!-- <li><a class="page-scroll" href="#equipe">Equipe</a></li> -->
-					<li><a class="page-scroll" href="#contato">Contato</a></li>
+					<li><a  id="menu-contato"class="page-scroll" href="#contato">Contato</a></li>
 				</ul>
 			</div>
 			<!-- /.navbar-collapse -->
@@ -94,7 +94,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 			<div class="intro-text">
 				<div class="intro-lead-in">Bem-vindo ao Instituto Luz e Caridade e Instituto Viva Vida</div>
 				<div class="intro-heading">Que bom que você veio</div>
-				<a href="#proximos_eventos" class="page-scroll btn btn-xl">Me conte mais</a>
+				<a id="botao-proximos-eventos" href="#proximos_eventos" class="page-scroll btn btn-xl">Me conte mais</a>
 			</div>
 		</div>
 	</header>
