--- a/index.html
+++ b/index.html
@@ -152,30 +152,43 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 			<div class="row">
 				<div class="col-lg-12 text-center">
 					<p class="large text-muted">&nbsp;</p>
-					<h3>Como sentir o amor em todas as suas formas?</h3>
-						<p class="large text-muted">Nas alturas dos Andes, a água se transforma em neve. Muda de forma, mas continua sendo água.</p>
-						<p class="large text-muted">Aí muda novamente e torna-se uma geleira. Então, o lago e o sol seduzem a geleira e quando ela derrete, vai para o rio. </p>
-						<div id="divleitura1" class="collapse">
-							<p class="large text-muted">Isso é incrivelmente bonito, o azul mais azul que você já viu. E é água. A água muda de forma milhões de vezes.</p>
-							<p class="large text-muted">Em cada uma das suas formas é esplêndida, e nunca para de ser água. As ondas são refrescantes, reconfortantes, porém, o tsunami é devorador e destrutivo.</p>
-							<p class="large text-muted">Às vezes, cai como chuva, dando vida nova à terra. Beber água fresca da nascente é curativo e nutritivo. Mas ela pode também afogar você, roubando seu último suspiro.</p>
-							<p class="large text-muted">À medida que sua consciência se expande, você percebe que o amor é tudo o que existe, tudo no universo é uma manifestação desse amor.</p>
-							<p class="large text-muted">Uma vez que você reconhece isso, consegue ver a magia e a maravilha de tudo. Você vê o amor na fúria das pessoas, o amor no ciúme, o amor mesmo dentro do ódio.</p>
-							<p class="large text-muted">Não importa quais emoções você expressa, você reconhece que tudo isso é apenas amor tentando penetrar.</p>
-							<p class="large text-muted">Quando nos ancoramos no amor-consciência, tudo o que vemos é amor em todas as suas formas. É perfeito.</p>
-							<p class="large text-muted">O sofrimento não depende do que nos rodeia. Depende da nossa percepção. É uma escolha que fazemos a cada momento.</p>
-							<p class="large text-muted">Se você está desesperado por conseguir amor do mundo exterior, dê ele a si mesmo.</p>
-							<p class="large text-muted">Se você sente ansiedade ou necessidade em alguns dos seus relacionamentos pessoais, ou se você quer que alguém mude para você ser feliz, então precisa entrar e amar a si mesmo.</p>
-							<p class="large text-muted">Enquanto não assumirmos a responsabilidade pela nossa própria felicidade, até não percebermos que nós e somente nós somos responsáveis pela nossa satisfação, continuaremos insatisfeitos.</p>
-							<p class="large text-muted">Você pode se reinventar, toda hora. Você pode escolher o que deseja. Essa é a coisa incrível sobre ser humanos: nós escolhemos, e então podemos mudar.</p>
-							<p class="large text-muted">Mudar para sermos mais amor, mais liberdade, deixar nossas limitações, começar a viver no momento, adquirir novos hábitos que não nos causam sofrimento.</p>
-							<p class="large text-muted">A verdadeira consciência tom  aresponsabilidade; não percebe o mundo como uma coisa separada de si.</p>
-							<p class="large text-muted">É consciente de fazer parte do resto do mundo. Se eu sempre me criticar, se eu estiver me comparando e reclamando, se eu não for apenas o brilho de quem eu realmente sou, quem é responsável por isso? Eu. Cada um de nós é único, perfeito e brilhante, mas precisamos encontrar esse brilho polindo as facetas. A escolha é sua, de mais ninguém. Eu escolho a grandeza de quem eu sou. Não posso ser mais ninguém. E essa escolha é uma coisa incrível, pois assim que você achar isso, não há mais comparações, nem ciúmes, nem inseguranças: só existe amor.</p>
-							<p class="large text-muted">Aí você abraçará seu mundo com felicidade. Você encontrará alegria por que não estará se comparando; apenas curtindo a variedade de sua bela criação.</p>
-							<p class="large text-muted">Por Isha Judd</p>
-						</div>
-					<button type="button" id="lermaisQuetaltransformaroAmoremsucesso" class="btn btn-info" data-toggle="collapse" data-target="#divleitura1">Ler Mais</button>
+					<h3>Dica de Leitura</h3>
+						<p class="large text-muted"><h2>O Santo Daime – Uma Nova Chance</h2></p>
+						<img src="img/outros/livro-santo-daime.jpg" alt="Capa do livro do Santo Daime">
+						<p class="large text-muted">O terceiro milênio nos trouxe uma grande preocupação e conscientização para novas mudanças sobre os aspectos que envolvem nosso ambiente e o ser humano em si. É visível o aumento constante do número de participantes do Xamanismo e da doutrina do Santo Daime. Todos preocupados com estas questões.</p>
+						<p class="large text-muted">Este livro tem o objetivo de conscientizar as pessoas sobre a necessidade de uma reforma íntima e moral para nossa própria evolução espiritual.</p>
+						<p class="large text-muted">Além de abordar vários aspectos sobre a doutrina espírita, o livro é um relato do autor sobre suas experiências e os ensinamentos que lhe foram revelados através dos rituais realizados em nossos Institutos com o uso da bebida sagrada Ayahuasca.</p>
+						<p class="large text-muted">O livro é uma espécie de guia, desde a origem até as principais características que envolvem o Xamanismo, a doutrina do Santo Daime, ciência e a espiritualidade.</p>
+						<p class="large text-muted">Ele aborda estes temas, de forma que a leitura seja simples e fácil de compreender.</p>
+						<p class="large text-muted">Saiba mais em <a href="www.osantodaime.com">www.osantodaime.com</a></p>
 				</div>
+				<div class="row">
+					<div class="col-lg-12 text-center">
+						<p class="large text-muted">&nbsp;</p>
+						<h3>Como sentir o amor em todas as suas formas?</h3>
+							<p class="large text-muted">Nas alturas dos Andes, a água se transforma em neve. Muda de forma, mas continua sendo água.</p>
+							<p class="large text-muted">Aí muda novamente e torna-se uma geleira. Então, o lago e o sol seduzem a geleira e quando ela derrete, vai para o rio. </p>
+							<div id="divleitura1" class="collapse">
+								<p class="large text-muted">Isso é incrivelmente bonito, o azul mais azul que você já viu. E é água. A água muda de forma milhões de vezes.</p>
+								<p class="large text-muted">Em cada uma das suas formas é esplêndida, e nunca para de ser água. As ondas são refrescantes, reconfortantes, porém, o tsunami é devorador e destrutivo.</p>
+								<p class="large text-muted">Às vezes, cai como chuva, dando vida nova à terra. Beber água fresca da nascente é curativo e nutritivo. Mas ela pode também afogar você, roubando seu último suspiro.</p>
+								<p class="large text-muted">À medida que sua consciência se expande, você percebe que o amor é tudo o que existe, tudo no universo é uma manifestação desse amor.</p>
+								<p class="large text-muted">Uma vez que você reconhece isso, consegue ver a magia e a maravilha de tudo. Você vê o amor na fúria das pessoas, o amor no ciúme, o amor mesmo dentro do ódio.</p>
+								<p class="large text-muted">Não importa quais emoções você expressa, você reconhece que tudo isso é apenas amor tentando penetrar.</p>
+								<p class="large text-muted">Quando nos ancoramos no amor-consciência, tudo o que vemos é amor em todas as suas formas. É perfeito.</p>
+								<p class="large text-muted">O sofrimento não depende do que nos rodeia. Depende da nossa percepção. É uma escolha que fazemos a cada momento.</p>
+								<p class="large text-muted">Se você está desesperado por conseguir amor do mundo exterior, dê ele a si mesmo.</p>
+								<p class="large text-muted">Se você sente ansiedade ou necessidade em alguns dos seus relacionamentos pessoais, ou se você quer que alguém mude para você ser feliz, então precisa entrar e amar a si mesmo.</p>
+								<p class="large text-muted">Enquanto não assumirmos a responsabilidade pela nossa própria felicidade, até não percebermos que nós e somente nós somos responsáveis pela nossa satisfação, continuaremos insatisfeitos.</p>
+								<p class="large text-muted">Você pode se reinventar, toda hora. Você pode escolher o que deseja. Essa é a coisa incrível sobre ser humanos: nós escolhemos, e então podemos mudar.</p>
+								<p class="large text-muted">Mudar para sermos mais amor, mais liberdade, deixar nossas limitações, começar a viver no momento, adquirir novos hábitos que não nos causam sofrimento.</p>
+								<p class="large text-muted">A verdadeira consciência tom  aresponsabilidade; não percebe o mundo como uma coisa separada de si.</p>
+								<p class="large text-muted">É consciente de fazer parte do resto do mundo. Se eu sempre me criticar, se eu estiver me comparando e reclamando, se eu não for apenas o brilho de quem eu realmente sou, quem é responsável por isso? Eu. Cada um de nós é único, perfeito e brilhante, mas precisamos encontrar esse brilho polindo as facetas. A escolha é sua, de mais ninguém. Eu escolho a grandeza de quem eu sou. Não posso ser mais ninguém. E essa escolha é uma coisa incrível, pois assim que você achar isso, não há mais comparações, nem ciúmes, nem inseguranças: só existe amor.</p>
+								<p class="large text-muted">Aí você abraçará seu mundo com felicidade. Você encontrará alegria por que não estará se comparando; apenas curtindo a variedade de sua bela criação.</p>
+								<p class="large text-muted">Por Isha Judd</p>
+							</div>
+						<button type="button" id="lermaisQuetaltransformaroAmoremsucesso" class="btn btn-info" data-toggle="collapse" data-target="#divleitura1">Ler Mais</button>
+					</div>
 			</div>
 		</div>
 	</section>
