--- a/index.html
+++ b/index.html
@@ -160,7 +160,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 						<p class="large text-muted">Além de abordar vários aspectos sobre a doutrina espírita, o livro é um relato do autor sobre suas experiências e os ensinamentos que lhe foram revelados através dos rituais realizados em nossos Institutos com o uso da bebida sagrada Ayahuasca.</p>
 						<p class="large text-muted">O livro é uma espécie de guia, desde a origem até as principais características que envolvem o Xamanismo, a doutrina do Santo Daime, ciência e a espiritualidade.</p>
 						<p class="large text-muted">Ele aborda estes temas, de forma que a leitura seja simples e fácil de compreender.</p>
-						<p class="large text-muted">Saiba mais em <a href="http://www.osantodaime.com" target="_blank">www.osantodaime.com</a></p>
+						<p class="large text-muted">Saiba mais em <a href="https://www.osantodaime.com/" target="_blank">www.osantodaime.com</a></p>
 				</div>
 				<div class="row">
 					<div class="col-lg-12 text-center">
