--- a/index.html
+++ b/index.html
@@ -635,8 +635,8 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 						<li><a href="https://www.facebook.com/C%C3%A9u-Viva-a-Vida-C%C3%A9u-Luz-e-Caridade-597612943629591/?fref=ts"><i class="fa fa-facebook"></i></a></li>
 					</ul><br/>
 					<h4 class="section-white text-muted">
-						Padrinho Luiz: (11) 94013-6304 <img src="img/whatsapp.png" alt="Whatsapp" title="Whatsapp" width="18px" height="18px"/><br /><br />
-						Padrinho Carlão: (11) 98793-0810 <img src="img/whatsapp.png" alt="Whatsapp" title="Whatsapp" width="18px" height="18px"/><br />
+						Padrinho Luiz: (11) 94209-7644 <a href="https://wa.me/5511942097644"><img src="img/whatsapp.png" alt="Whatsapp" title="Whatsapp" width="18px" height="18px"/></a><br /><br />
+						Padrinho Carlão: (11) 98793-0810 <a href="https://wa.me/5511987930810"><img src="img/whatsapp.png" alt="Whatsapp" title="Whatsapp" width="18px" height="18px"/></a><br />
 						<br /> Rua Don Pedro de Alcântara, 430 - Mairiporã - São Paulo (Antiga Rua 01)<br />
 						<br /> Emails de contato: <a href="mailto:marciafilipe00@hotmail.com">marciafilipe00@hotmail.com</a>
 						<br /> <a href="mailto:marciafilipe00@hotmail.com">ceuvivavida@gmail.com</a>
