--- a/index.html
+++ b/index.html
@@ -635,7 +635,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 					</ul><br/>
 					<h4 class="section-white text-muted">
 						Padrinho Luiz<br /><br />
-						Padrinho Carlão: <br />
+						Padrinho Carlão<br />
 						<br /> Rua Don Pedro de Alcântara, 430 - Mairiporã - São Paulo (Antiga Rua 01)<br />
 						<br /> Emails de contato: <a href="mailto:institutoluzecaridade@gmail.com">institutoluzecaridade@gmail.com</a>
 					</h4>
